fix: video carousel fixed but playing videos still overlap

--- a/styles/VideoSection.module.css
+++ b/styles/VideoSection.module.css
@@ -21,7 +21,7 @@
 }
 
 .titleVideo {
-  @apply font-base inset-0 flex flex-col items-center pt-100 pb-40 md:px-0 bg-gradient-to-b from-white/80 from-30%;
+  @apply w-full font-base inset-0 flex flex-col items-center pt-100 pb-40 md:px-0 bg-gradient-to-b from-white/80 from-30%;
 }
 
 .titleVideo h1 {
@@ -37,7 +37,7 @@
 }
 
 .titleVideo p {
-  @apply text-sm md:text-base lg:text-xl font-base font-semibold text-primary-color-500 text-center mt-30 lg:w-1/2;
+  @apply text-sm md:text-base w-4/5 lg:w-auto lg:text-xl whitespace-pre-line font-base font-semibold text-primary-color-500 text-center mt-30 lg:w-1/2;
 }
 
 .videoContent h3 {
